--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social</a></li>
             </ul>
-            <img class="JA" src="cropped.png" alt="logo">
+            <img class="JA" src="JA.png" alt="logo" style="height: 4e;">
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section style="aspect-ratio: 16/9;">
@@ -106,16 +106,17 @@
             </div>
         </div>
         <div class="aboutme" data-aos="fade-in">
-            <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
-            <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
-            Currently working as a Software developer intern at WiseNetwork Oy.<br><br>
-            In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
-            I have learned variety of programming languages via school and freetime.<br>
-            I have also learned the basics of Blender due the passionate of animating.<br><br>
-            Interested in all kinds of development projects/jobs.
-            </p>
+                I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
+                Currently working as a Software developer intern at WiseNetwork Oy.<br><br>
+                In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
+                I have learned variety of programming languages via school and freetime.<br>
+                I have also learned the basics of Blender due the passionate of animating.<br><br>
+                Interested in all kinds of development projects/jobs.
+                </p>
+            <h2>About me
+                <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
+            </h2>
         </div>
         <div class="row" data-aos="fade-in">
             <div class="column" style="background-image: url('experience.png')"></div>
