--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <li class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social</a></li>
             </ul>
-            <img class="JA" src="JA.png" alt="logo" style="height: 4e;">
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section style="aspect-ratio: 16/9;">
@@ -67,8 +66,8 @@
                 <div class="paragraph1">< p ></div>
                 <div class="paragraph2">< / p ></div>
                 <h2>Education</h2>
-                <p>
-                    Currently studying Business Information Systems in Satakunta University of Applied Sciences.
+                <p><span style="color:#cfca8c;">
+                    Currently studying Business Information Systems in Satakunta University of Applied Sciences.</span>
                 </p>
             </div>
             <div class="box2" data-aos="zoom-in">
@@ -77,14 +76,14 @@
                 <div class="paragraph2">< / p ></div>
                 <h2>Skills</h2>
                 <p>
-                    JavaScript,
+                    <span style="color:#cfca8c;">JavaScript,
                     Blender,
                     React,
                     Html/Css,
                     Video editing,
-                    WordPress,
+                    AngularJS,
                     Python,
-                    Customer service
+                    Customer service</span>
                 </p>
             </div>
             <div class="box3" data-aos="zoom-in">
@@ -92,7 +91,7 @@
                 <h2>My Work</h2>
                 <div class="link">< a ></div>
                 <div class="link2">< / a ></div>
-                <a style="text-decoration: underline;" href="https://github.com/JekeZ" style="text-decoration: none;" target="_blank">Link to my GitHub</a>
+                <a style="text-decoration: underline;" href="https://github.com/JekeZ" style="text-decoration: none;" target="_blank"><span style="color:#cfca8c;">Link to my GitHub</span></a>
             </div>
         </div>
         <div class="Work" data-aos="fade-in">
@@ -108,7 +107,7 @@
         <div class="aboutme" data-aos="fade-in">
             <p>Born in Tampere, Finland 1997.<br>
                 I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
-                Currently working as a Software developer intern at WiseNetwork Oy.<br><br>
+                Currently working as a Software developer intern at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
                 In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
                 I have learned variety of programming languages via school and freetime.<br>
                 I have also learned the basics of Blender due the passionate of animating.<br><br>
@@ -120,21 +119,21 @@
         </div>
         <div class="row" data-aos="fade-in">
             <div class="column" style="background-image: url('experience.png')"></div>
-            <div class="column" style="background: linear-gradient( rgb(36, 71, 231), rgb(236, 236, 236)); color: white;">
-                Warehouse Operations and Customer Service (2017 – 2020) <br> <br>
+            <div class="column" style="background: black, rgb(236, 236, 236); color: #cfca8c;">
+                <span style="color: white;">Warehouse Operations and Customer Service (2016 – 2020)</span> <br> <br>
 
                 My professional journey began in the dynamic world of warehouse operations, where I served as a dedicated team member managing a pick-up point.
                 In this role, I cultivated strong customer service skills while ensuring the seamless fulfillment of orders. 
                 The experience laid the groundwork for my commitment to delivering exceptional service and managing operational intricacies. <br> <br>
                 
-                Transition to Healthcare IT - Application Specialist (1.6 – 26.11.2023) <br> <br>
+                <span style="color: white;">Healthcare IT - Application Specialist (1.6 – 26.10.2023)</span> <br> <br>
                 
                 Eager for new challenges, I transitioned into the realm of healthcare IT as an Application Specialist. 
                 Here, I found myself at the intersection of technology and healthcare, 
                 providing invaluable support to doctors and nurses grappling with IT-related challenges. 
                 The role not only deepened my technical expertise but also instilled a profound appreciation for the critical role technology plays in optimizing healthcare workflows.
                 <br> <br>
-                Software Development Intern (Present) <br> <br>
+                <span style="color: white;">Software Development Intern (6.11.2023 - Present)</span> <br> <br>
 
                 Driven by a passion for innovation, I embarked on a new chapter as a Software Development Intern, specializing in mobile app development. This phase of my journey represents a conscious choice to embrace the forefront of technology. Actively contributing to the creation of cutting-edge solutions, I am refining my skills in crafting user-friendly and efficient mobile applications.
             </div>
