stretching the title video

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section style="aspect-ratio: 16/9;">
-            <div id="sliderplayer-0" style="width: 100%; height: 100%;" ></div>
+            <div id="sliderplayer-0"></div>
             <script async src="https://www.youtube.com/iframe_api"></script>
             <script>
                 // Array to store player instances
