--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section style="aspect-ratio: 16/9;">
+            <div class="error">If you see this text, the video didn't load properly, please refresh the page for the best experience:)</div>
             <div id="sliderplayer-0"></div>
             <script async src="https://www.youtube.com/iframe_api"></script>
             <script>
@@ -105,20 +106,19 @@
             </div>
         </div>
         <div class="aboutme" data-aos="fade-in">
-            <p>Born in Tampere, Finland 1997.<br>
-                I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
-                Currently working as a Software developer intern at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
-                In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
-                I have learned variety of programming languages via school and freetime.<br>
-                I have also learned the basics of Blender due the passionate of animating.<br><br>
-                Interested in all kinds of development projects/jobs.
-                </p>
             <h2>About me
-                <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
+                <p>Born in Tampere, Finland 1997.<br>
+                    I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
+                    Currently working as a Software developer intern at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
+                    In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
+                    I have learned variety of programming languages via school and freetime.<br>
+                    I have also learned the basics of Blender due the passion for animating.<br><br>
+                </p>
             </h2>
+            <img class="Jere" src="Me.JPEG" alt="koodikuva">
         </div>
         <div class="row" data-aos="fade-in">
-            <div class="column" style="background-image: url('experience.png')"></div>
+            <img class="experience" src="experience.png" alt="koodikuva">
             <div class="column" style="background: black, rgb(236, 236, 236); color: #cfca8c;">
                 <span style="color: white;">Warehouse Operations and Customer Service (2016 – 2020)</span> <br> <br>
 
