--- a/index.html
+++ b/index.html
@@ -7,15 +7,30 @@
     <title>Jere's website</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
     <body>
         <a id="top"></a>
         <header>
             <ul>
-                <li class="btn1"><a href="#top">// Home</a></li>
-                <li class="btn2"><a href="#contact">// Contact</a></li>
-                <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social</a></li>
+                <li class="btn1"><a href="#top">// Home <span class="material-symbols-outlined">
+                    house
+                    </span></a></li>
+                <li class="btn2"><a href="#contact">// Contact <span class="material-symbols-outlined">
+                    chat
+                    </span></a></li>
+                <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social <span class="material-symbols-outlined">
+                    open_in_new
+                    </span></a></li>
             </ul>
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
@@ -144,14 +159,18 @@
                 </a>
                 <img id="mail" src="mail.png" alt="mail">
 
-            <div id ="contact" class="Contact" data-aos="zoom-in">Interested in working together? Let's Connect via LinkedIn or Email!</div>
+            <div id ="contact" class="Contact" data-aos="zoom-in">Interested in working together? Let's Connect via LinkedIn or Email! <span class="material-symbols-outlined">
+                mail
+                </span></div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
                 <button class="send" type="submit">Send</button>
 
-                <a class="totop" href="#top">Back to top</a>
+                <a class="totop" href="#top">Back to top <span class="material-symbols-outlined">
+                    arrow_upward
+                    </span></a>
                 <h3 class="lopputeksti">Made by Jere Aronsalo | Powered by GitHub Pages</h3>
             </form>
         </footer>
