--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <span style="color:#cfca8c;">JavaScript,
                     Blender,
                     React,
-                    Html/Css,
+                    HTML/CSS,
                     Video editing,
                     AngularJS,
                     Python,
@@ -125,9 +125,10 @@
                 <p>Born in Tampere, Finland 1997.<br>
                     I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
                     Currently working as a Software developer intern at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
-                    In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
+                    In my freetime besides of coding, I enjoy playing guitar, grinding video games, playing badminton and eating delicious food.<br><br>
                     I have learned variety of programming languages via school and freetime.<br>
                     I have also learned the basics of Blender due the passion for animating.<br><br>
+                    Little experience in Unreal Engine, as I completed a course named "Let's make a game". There is preview of the game we made above this text.
                 </p>
             </h2>
             <img class="Jere" src="Me.JPEG" alt="koodikuva">
@@ -135,38 +136,46 @@
         <div class="row" data-aos="fade-in">
             <img class="experience" src="experience.png" alt="koodikuva">
             <div class="column" style="background: black, rgb(236, 236, 236); color: #cfca8c;">
-                <span style="color: white;">Warehouse Operations and Customer Service (2016 – 2020)</span> <br> <br>
+                <span style="color: white;">Dahl Suomi Oy - Warehouse Operations and Customer Service (2016 – 2020)</span> <br> <br>
 
-                My professional journey began in the dynamic world of warehouse operations, where I served as a dedicated team member managing a pick-up point.
+                My professional journey began in the world of warehouse operations, where I served as a dedicated team member managing a pick-up point.
                 In this role, I cultivated strong customer service skills while ensuring the seamless fulfillment of orders. 
                 The experience laid the groundwork for my commitment to delivering exceptional service and managing operational intricacies. <br> <br>
                 
-                <span style="color: white;">Healthcare IT - Application Specialist (1.6.2023 – 26.10.2023)</span> <br> <br>
+                <span style="color: white;">2M-IT Oy - Application Specialist (1.6.2023 – 26.10.2023)</span> <br> <br>
                 
-                Eager for new challenges, I transitioned into the realm of healthcare IT as an Application Specialist. 
-                Here, I found myself at the intersection of technology and healthcare, 
-                providing invaluable support to doctors and nurses grappling with IT-related challenges. 
-                The role not only deepened my technical expertise but also instilled a profound appreciation for the critical role technology plays in optimizing healthcare workflows.
+                My First IT-field job, as part of my studies, I transitioned into the realm of healthcare IT as an Application Specialist. 
+                My daily tasks were helping doctors and nurses with their problems with healthcare
+                applications and tech problems. 
+                The role not only deepened my technical expertise but also instilled a profound appreciation for the critical role technology plays in healthcare.
                 <br> <br>
-                <span style="color: white;">Software Development Intern (6.11.2023 - Present)</span> <br> <br>
+                <span style="color: white;">WiseNetwork Oy - Software Development Intern (6.11.2023 - Present)</span> <br> <br>
 
-                Driven by a passion for innovation, I embarked on a new chapter as a Software Development Intern, specializing in mobile app development. This phase of my journey represents a conscious choice to embrace the forefront of technology. Actively contributing to the creation of cutting-edge solutions, I am refining my skills in crafting user-friendly and efficient mobile applications.
+                Driven by a passion for innovation and doing visual work, I embarked on a new chapter as a Software Development Intern, specializing in mobile app development. 
+                Daily jobs include working with gym applications, which are written with JavaScript, using AngularJS. 
+                Actively contributing to the creation of cutting-edge solutions, I am refining my skills in crafting user-friendly and efficient mobile applications.
             </div>
         </div>
         <footer class="footer" data-aos="fade-in">
-                <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
+                <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/" style="color: black;">
                 <img id="logo" src="linkedin.png" alt="logo">
                 </a>
                 <img id="mail" src="mail.png" alt="mail">
 
-            <div id ="contact" class="Contact" data-aos="zoom-in">Interested in working together? Let's Connect via LinkedIn or Email! <span class="material-symbols-outlined">
+            <div id ="contact" class="Contact" data-aos="zoom-in">Let's Connect via LinkedIn or Email! <span class="material-symbols-outlined">
                 mail
                 </span></div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
-                <button class="send" type="submit">Send</button>
+                <button class="send" type="submit" onclick="Funktio()">Send</button>
+
+                <script>
+                    function Funktio(){
+                        alert("Thanks!")
+                    }
+                </script>
 
                 <a class="totop" href="#top">Back to top <span class="material-symbols-outlined">
                     arrow_upward
