--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             </ul>
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
-        <section style="aspect-ratio: 16/9;">
-            <div class="error">If you see this text, the video didn't load properly, please refresh the page for the best experience:)</div>
+        <section class="sektio" style="aspect-ratio: 16/9;">
+            <img class="background5" src="background5.jpg" alt="tausta">
+            <!-- <div class="error">If you see this text, the video didn't load properly, please refresh the page for the best experience:)</div> -->
             <div id="sliderplayer-0"></div>
             <script async src="https://www.youtube.com/iframe_api"></script>
             <script>
@@ -76,6 +77,8 @@
             </script>
         </section>
         <div class="boxes" data-aos="fade-in">
+            <div class="overlay"></div>
+            <img class="background1" src="background1.jpg" alt="tausta">
             <div class="box1" data-aos="zoom-in">
                 <img class="kirja" src="book-icon-145.png" alt="kirja">
 
@@ -131,6 +134,8 @@
                     Little experience in Unreal Engine, as I completed a course named "Let's make a game". There is preview of the game we made above this text.
                 </p>
             </h2>
+            <div class="overlay4"></div>
+            <img class="background4" src="background4.jpg" alt="tausta4">
             <img class="Jere" src="Me.JPEG" alt="koodikuva">
         </div>
         <div class="row" data-aos="fade-in">
@@ -157,14 +162,16 @@
             </div>
         </div>
         <footer class="footer" data-aos="fade-in">
+            <div class="overlay2">
+                <img class="background3" src="background6.jpg" alt="tausta2">
+            </div>
+
                 <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/" style="color: black;">
                 <img id="logo" src="linkedin.png" alt="logo">
                 </a>
                 <img id="mail" src="mail.png" alt="mail">
 
-            <div id ="contact" class="Contact" data-aos="zoom-in">Let's Connect via LinkedIn or Email! <span class="material-symbols-outlined">
-                mail
-                </span></div>
+            <div id ="contact" class="Contact" data-aos="zoom-in">Let's Connect via LinkedIn or Email!</div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
