--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img class="Jere" src="Me.JPEG" alt="koodikuva">
         </div>
         <div class="row" data-aos="fade-in">
-            <img class="experience" src="Aronsalo_Logo.png" alt="koodikuva">
+            <img class="experience" src="experience.png" alt="koodikuva">
             <div class="column" style="background: black, rgb(236, 236, 236); color: #cfca8c;">
                 <span style="color: white;">Dahl Suomi Oy - Warehouse Operations and Customer Service (2016 – 2020)</span> <br> <br>
 
@@ -186,7 +186,7 @@
                     </span></a>
                 <h3 class="lopputeksti">Made by Jere Aronsalo | Powered by GitHub Pages</h3>
             </form>
-            <img class="background3" src="bakround.png" alt="tausta2">
+            <img class="background3" src="Aronsalo_Logo.png" alt="tausta2">
 
         </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
