--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                     Video editing,
                     AngularJS,
                     Python,
-                    Customer service</span>
+                    Customer service,
+                    Ionic, PHP</span>
                 </p>
             </div>
             <div class="box3" data-aos="zoom-in">
