--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 <div class="paragraph2">< / p ></div>
                 <h2>Education</h2>
                 <p><span style="color:#cfca8c;">
-                    Currently studying Business Information Systems in Satakunta University of Applied Sciences.</span>
+                    Bachelor of Business Information Systems <span style="color: white;">(2024)</span> <br>
+                    Basic degree in logistics <span style="color: white;">(2016)</span></span>
                 </p>
             </div>
             <div class="box2" data-aos="zoom-in">
@@ -127,7 +128,7 @@
         <div class="aboutme" data-aos="fade-in">
             <h2>About me
                 <p>Born in Tampere, Finland 1997.<br>
-                    27 Year old pal, who has a strong interest in IT.<br>
+                    27 Year old fresh graduate, who has a strong interest in IT.<br>
                     Currently working as a Junior Software developer at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
                     In my freetime besides of coding, I enjoy playing guitar, grinding video games, playing badminton and eating delicious food.<br><br>
                     I have learned variety of programming languages via school and freetime.<br>
