--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="aboutme" data-aos="fade-in">
             <h2>About me
                 <p>Born in Tampere, Finland 1997.<br>
-                    27 Year old fresh graduate, who has a strong interest in IT.<br>
+                    27 Years old fresh graduate, who has a strong interest in IT.<br>
                     Currently working as a Junior Software developer at <span style="color: white;">Wise</span><span style="color: orange;">Network</span> Oy.<br><br>
                     In my freetime besides of coding, I enjoy playing guitar, grinding video games, playing badminton and eating delicious food.<br><br>
                     I have learned variety of programming languages via school and freetime.<br>
