--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section class="sektio" style="aspect-ratio: 16/9;">
-            <img class="background5" src="background5.jpg" alt="tausta">
+            <img class="background5" src="ai-image4.webp" alt="tausta">
             <!-- <div class="error">If you see this text, the video didn't load properly, please refresh the page for the best experience:)</div> -->
             <div id="sliderplayer-0"></div>
             <script async src="https://www.youtube.com/iframe_api"></script>
